--- a/index2.css
+++ b/index2.css
@@ -1,12 +1,13 @@
 body{
     margin: 0;
-    padding: 5.5rem;
+    padding: 0;
 }
 .main{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(250px, auto);
     grid-gap: 1rem;
+    margin: 2rem;
 }
 .main > div{
     padding: 1rem;
