--- a/index2.css
+++ b/index2.css
@@ -7,7 +7,7 @@ body{
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(250px, auto);
     grid-gap: 1rem;
-    margin: 5rem 2rem 0 2rem;
+    margin: 5rem 5rem 0 5rem;
 }
 .main > div{
     padding: 1rem;
@@ -174,4 +174,9 @@ body{
         grid-row: 5;
         grid-column: 1/5;
     }
+    .main{
+        margin: 5rem 0 2rem 0rem;
+    }
+    
+        
 }
