--- a/index2.css
+++ b/index2.css
@@ -175,7 +175,7 @@ body{
         grid-column: 1/5;
     }
     .main{
-        margin: 5rem 0 2rem 0rem;
+        margin: 5rem 2rem 2rem 2rem;
     }
     
         
